# Adaptive-Deep-Networks-Integrating-Attention-Residuals-Dynamic-Computation-and-Test-Time-Adaptation

./: .gitignore  .pre-commit-config.yaml  ADN_paper.md  AGENTS.md  Adaptive_Deep_Networks_Final.md  Adaptive_Deep_Networks_Query_Optimization_REVISED.md  DATASET_VALIDATION_REPORT.md  LARGE_MODEL_BUILD.md  MATDO-E.tex  MATDO.md  Makefile  PAPER_PARAMS_UPDATE.md  PAPER_UPDATES.md  PAPER_UPDATE_SUMMARY.md  PARAMS_UPDATE_SUMMARY.md  PROJECT_ORGANIZATION.md  QASP_paper.aux  QASP_paper.fdb_latexmk  QASP_paper.fls  QASP_paper.out  QASP_paper.tex  QASP_paper_cn.md  README.md  REFACTOR_COMPLETE.md  STREAMING_TRAINING_GUIDE.md  TURBOQUANT_IMPLEMENTATION_SUMMARY.md  VALIDATION_REPORT_5_2.md  build_large_model.py  calculate_params.py  calculate_params_v2.py  calculate_training_time.py  check_datasets.sh  dataset_validation.py  download_datasets.sh  git_commit.sh  matdo-e_paper.md  matdo-e_paper.tex  matdo-e_paper_cn.md  matdo-e_revised_paper.md  matdo-e_revised_paper.tex  (+6 more)
.github/workflows/: README.md  benchmark.yml  pr.yml  validate.yml
.workbuddy/: expert-history.json
.workbuddy/memory/: 2026-03-26.md  2026-03-27.md  2026-04-23.md  2026-04-24.md  MEMORY.md
MATDO-new/tests/: test_arbitrage.py  test_architecture_sweep.py  test_full_rls.py  test_validation_report.py  test_wall_dynamics.py
QASP/: __init__.py
QASP/adaptation/: __init__.py  matrix_qasp.py  ponder_gate.py  quality_score.py  stiefel.py
QASP/configs/: __init__.py  experiment.py  model.py  qasp.py
QASP/experiments/: __init__.py  runner.py
QASP/inference/: __init__.py  generator.py  incremental.py  kv_cache.py  rabitq.py
QASP/models/: __init__.py  components.py  ngram_memory.py  qasp_layer.py  qasp_transformer.py  value_weighted_attnres.py  value_weighted_engram.py
QASP/scripts/: run_experiments.py  run_generation.py  run_inference.py
adn/core/: __init__.py  base.py  config.py  types.py
adn/models/: generator.py
archive/old_summaries/: CHAPTER3_CODE_REVIEW.md  E2E_TESTING_COMPLETE.md  E2E_TEST_RESULTS.md  FIXES_SUMMARY.md  OPTIMIZATIONS_APPLIED.md  OPTIMIZATIONS_COMPLETE.md  OPTIMIZATION_FIXES.md  PAPER_CODE_GAP_ANALYSIS.md  PAPER_REVISIONS.md  PAPER_UPDATES_SUMMARY.md  REVISION_SUMMARY.md
configs/: ds_config_h20.json
configs/experiments/: default.yaml  exp1_representation_burial.yaml  exp2_margin_analysis.yaml  exp3_gradient_flow.yaml  validation_targets.yaml
docs/: A100_80G_COMPLETE_GUIDE.md  ARCHITECTURE.md  ATTNRES_INTEGRATION_STATUS.md  CONTRIBUTING.md  DOCUMENTATION_MAINTENANCE.md  DOCUMENTATION_SYSTEM.md  INCREMENTAL_KV_IMPLEMENTATION.md  INFERENCE_CODE_CONSISTENCY_CHECK.md  INFERENCE_OPTIMIZATION_COMPLETE.md  PAPER_CODE_CONSISTENCY_CHECK.md  PAPER_INFERENCE_CONSISTENCY_ANALYSIS.md  QTTP_INTEGRATION_STATUS.md  README.md  SCRIPTS_FIX_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  rabitq_external_integration.md
docs/api/: README.md
docs/audits/: FULL_CITATION_AUDIT.md  QTTT_CITATION_AUDIT.md
docs/explanation/: architecture-decisions.md  index.md
docs/getting-started/: first-model.md  index.md  installation.md  quickstart.md  troubleshooting.md
docs/guides/: AUTORESEARCH_GUIDE.md  MATDO_E_A100_BEGINNER_GUIDE.md  MNN_TURBOQUANT_IMPROVEMENTS.md  RABITQ_ALGORITHM.md  RABITQ_GUIDE.md  RABITQ_IMPROVEMENTS.md  README_FOR_BEGINNERS.md  TURBOQUANT_REFACTORED.md  TURBOQUANT_TO_RABITQ_MIGRATION_GUIDE.md  TURBOQUANT_V3.md
docs/how-to/: debug-model.md  evaluate-model.md  index.md  train-model.md
docs/papers/: ADN_Query_Optimization_v3.md  Adaptive_Deep_Networks_Query_Optimization.md  Adaptive_Deep_Networks_Query_Optimization_REVISED.md  Adaptive_Deep_Networks_RaBitQ.md  Adaptive_Deep_Networks_TurboQuant.md  Adaptive_Deep_Networks_V1.md  matdo-e_revised_paper.tex
docs/project/: progress.txt
docs/reference/: glossary.md  index.md
docs/reports/: AUTODL_VERIFICATION_GUIDE.md  DATA_VERIFICATION_REPORT.md  H20_4CARD_SUMMARY.md  MODEL_PARAMS_REPORT.md  STREAMING_UPDATE_SUMMARY.md
docs/tutorials/: index.md  tutorial-01-attnres.md  tutorial-02-qttt.md  tutorial-03-rabitq.md  tutorial-04-engram.md  tutorial-05-gating.md  tutorial-06-end-to-end.md
experiments/: MIGRATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  __init__.py  run_all_experiments.py  run_experiments_unified.py  run_refactored.py
experiments/autoresearch/: agent_driver.py  hypothesis_stub.py  program.md  run_agent.py  score_trial.py
experiments/common/: __init__.py  config.py  device.py  logging_config.py  paths.py  visualization.py
experiments/core/: base_core_experiment.py  base_experiment.py
experiments/docs/: RABITQ_EXPERIMENTS.md
experiments/engram/: benchmark_engram.py
experiments/matdo/: MATDO_NEW_BRIDGE.md  README.md  __init__.py  paper_policy_bridge.py  run_all_experiments.py  run_smoke.py
experiments/rabitq/: config.yaml  run_compression_verification.py
experiments/real_model/: IMPLEMENTATION_SUMMARY.md  README.md  model_loader.py  validator.py
experiments/runner/: __init__.py  base.py  (+2 more)
results/: README.md
scripts/: README.md  autodl_h20_setup.sh  benchmark_attnres_endtoend.py  benchmark_qttt_endtoend.py  benchmark_qttt_paper_values.py  benchmark_qttt_paper_values_quick.py  benchmark_rabitq_endtoend.py  benchmark_rabitq_final.py  benchmark_rabitq_kv_compression.py  benchmark_rabitq_minimal.py  benchmark_rabitq_quick.py  dataset_info.py  eval_5_2.py  eval_rabitq_cpp_binding.py  quick_start_h20.sh  run_benchmarks.py  smoke_sft_local.py  train_model.py  train_refactored.py  train_unified.py  validate_hf_datasets.py  validate_models.py  validate_rabitq.py  verify_qttt_fix.py
tasks/: prd-adaptive-deep-networks-validation.md  prd-adaptive-transformer-integration.md  prd-batch-processing.md  prd-engram-integration.md  prd-incremental-kv.md  prd-inference-optimization.md  prd-optimizations.md  prd-rabitq-library-alignment.md  product-brief-engram.md  product-brief-incremental-kv.md  product-brief-inference-optimization.md  product-brief-optimizations.md  product-brief.md
tests/: conftest.py  run_tests.py  test_rabitq_refactored.py  test_turboquant_v3_refactored.py
(+280 files in other folders)
