[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adn"
version = "0.2.0"
description = "Adaptive Deep Networks: Quality-Aware Stiefel Projection and Unified Resource Model"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Kimi Code", email = "code@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "typing-extensions>=4.0.0",
    "transformers>=4.35.0",
]

[project.scripts]
adn-train = "scripts.train:main"
adn-eval = "scripts.evaluate:main"
adn-generate = "scripts.generate:main"
adn-benchmark = "scripts.benchmark:main"
adn-experiment = "scripts.experiment:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "N806",  # variable name in function (allow for scientific code)
    "N803",  # argument name (allow for ML conventions)
    "N812",  # lowercase imported as non-lowercase (F for functional is PyTorch standard)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["N802", "N803", "N801", "N812", "F841", "E741", "B011", "SIM110", "SIM117", "SIM118", "E712", "E402", "UP038", "B007"]  # Allow test conventions and setup code
"tests/legacy/*" = ["ALL"]  # Legacy tests are deprecated and ignored by pytest
"src/*/legacy/*" = ["ALL"]  # Legacy source is deprecated
"src/rabitq/legacy/*" = ["ALL"]  # Legacy RaBitQ source is deprecated

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
disallow_incomplete_defs = false
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    ".venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["adn"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
